--- a/express/views/partials/header.ejs
+++ b/express/views/partials/header.ejs
@@ -26,7 +26,8 @@
     }
 </style>
 <header class="main-header">
-    <div style="margin-right: 15px;"><a href="/">Home</a></div>
-    <div><a href="/about">About</a></div>
+    <div><a href="/">Home</a></div>
+    <div style="margin-left: 15px;"><a href="/about">About</a></div>
+    <div style="margin-left: 15px;"><a href="/blogs">Blogs</a></div>
     <div><a href="/404">404</a></div>
 </header>
